--- a/ipynb-to-pdf-with-plotly-converter.ipynb
+++ b/ipynb-to-pdf-with-plotly-converter.ipynb
@@ -560,7 +560,7 @@
         "Desarrollado por **Abi Rodríguez**.\n",
         "Este notebook fue diseñado como una herramienta personal para convertir archivos de Google Colab `.ipynb` a PDF con gráficas de Plotly en alta resolución.\n",
         "\n",
-        "Con apoyo de **ChatGPT (OpenAI)** para depurar errores técnicos, documentar el proceso y optimizar la exportación de notebooks en formato PDF."
+        "Con apoyo de **ChatGPT (OpenAI)** para depurar errores técnicos."
       ],
       "metadata": {
         "id": "UCGXsGy7GTbp"
