--- a/ipynb-to-pdf-with-plotly-converter.ipynb
+++ b/ipynb-to-pdf-with-plotly-converter.ipynb
@@ -228,17 +228,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 160
+          "height": 333
         },
         "id": "p_nRsCceAj1m",
-        "outputId": "29560a2f-79df-4964-a2bd-e2949e89853d"
+        "outputId": "ee10b3f4-a998-440b-fdf6-11007002bbe3"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[INFO] Installing kaleido==0.2.1 …\n",
+            "[INFO] Installing pyppeteer==2.0.0 …\n",
             "🔼 Selecciona tu archivo .ipynb …\n"
           ]
         },
@@ -250,9 +252,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-bf3338ed-32fc-4f24-ab6b-523d9e1cb5db\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-bc8573bd-f337-41eb-9537-8d74be0e02f8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-bf3338ed-32fc-4f24-ab6b-523d9e1cb5db\">\n",
+              "     <output id=\"result-bc8573bd-f337-41eb-9537-8d74be0e02f8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -440,10 +442,42 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving Reto.ipynb to Reto.ipynb\n",
-            "📄 Notebook: Reto.ipynb\n",
-            "🖨️ Exportando a: Reto_export.pdf\n",
-            "✅ PDF generado: Reto_export.pdf\n"
+            "Saving Challenge_StochasticOptimization (1).ipynb to Challenge_StochasticOptimization (1).ipynb\n",
+            "📄 Notebook: Challenge_StochasticOptimization (1).ipynb\n",
+            "🖨️ Exportando a: Challenge_StochasticOptimization (1)_export.pdf\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[INFO] Starting Chromium download.\n",
+            "INFO:pyppeteer.chromium_downloader:Starting Chromium download.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Descargando Chromium (una sola vez)…\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 183M/183M [00:00<00:00, 266Mb/s]\n",
+            "[INFO] Beginning extraction\n",
+            "INFO:pyppeteer.chromium_downloader:Beginning extraction\n",
+            "[INFO] Chromium extracted to: /root/.local/share/pyppeteer/local-chromium/1181205\n",
+            "INFO:pyppeteer.chromium_downloader:Chromium extracted to: /root/.local/share/pyppeteer/local-chromium/1181205\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ PDF generado: Challenge_StochasticOptimization (1)_export.pdf\n"
           ]
         },
         {
@@ -505,7 +539,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_2d182347-cc06-4125-a2eb-338a69d13138\", \"Reto_export.pdf\", 5773053)"
+              "download(\"download_d4d6b5ec-382a-4cfe-a077-680ee82b34d0\", \"Challenge_StochasticOptimization (1)_export.pdf\", 2403411)"
             ]
           },
           "metadata": {}
